Double scroll bar bug fixed

--- a/src/app/dashboard/dashboard.css
+++ b/src/app/dashboard/dashboard.css
@@ -13,13 +13,14 @@
 
 .search-bar {
     margin-left: 7%;
+    margin-top: 10px;
     width: 40%;
     height: 50px;
     display: flex;
     padding: 10px;
     background-color: #ffffff;
     /* border-bottom: 1px solid #ffffff; */
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 10;
     gap: 2px;
@@ -53,35 +54,59 @@
     background-color: #58b1ff;
 }
 
-.books-container {
-    /* margin: auto 0px; */
+/* .books-container {
+ 
     flex: 1;
     overflow-y: auto;
-    /* padding: 20px; */
+ 
     display: flex;
     flex-wrap: wrap;      
-    /* gap: 20px;            */
-    background-color: #fff;
-}
+ 
+    background-color: #de7474;
+} */
 
 .books-cards-container {
     align-items: center;
     justify-content: center;
     flex: 1;
-    overflow-y: auto;
-    padding: 20px;
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;      
     gap: 20px;           
-    background-color: #fff;
+    background-color: #ffffff;
     align-items: center;
 }
 
 .book-card {
-    border: 3px solid #ff0000;
+    border: 3px solid #58b1ff;
     padding: 10px;
     margin-bottom: 12px;
-    border-radius: 4px;
+    border-radius: 14px;
     width: 250px;
     height: 350px;
+    display: flex;
+    flex-direction: column;
+}
+
+.book-image{
+    border-radius: 14px;
+    height: 70%;
+    background-color: rgb(234, 234, 234);
+}
+.book-info{
+    border-radius: 14px;
+    padding-left: 4%;
+    padding-top: 3%;
+    height: 20%;
+    background-color: #b5c8e1;
+}
+.book-price{
+    border-radius: 14px;
+    /* justify-content: center;
+    align-items: center; */
+    text-align: center;
+    padding-top: 3%;
+    height: 10%;
+    background-color: rgb(232, 232, 232);
+
 }
